<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:fontFamily="@font/bitter_bold"
        android:padding="15dp"
        android:text="@string/name_input_title"
        android:textColor="@android:color/primary_text_light"
        android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_input_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="hint"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSecondName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.70"
        android:fontFamily="@font/bitter_bold"
        android:padding="15dp"
        android:text="@string/second_name_title"
        android:textColor="@android:color/primary_text_light"
        android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/second_name_hint"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:fontFamily="@font/bitter_bold"
        android:padding="15dp"
        android:text="@string/age_input_title"
        android:textColor="@android:color/primary_text_light"
        android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/age_input_hint"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="53dp"
        android:layout_height="wrap_content"
        android:text="Button" />

</LinearLayout>